[gd_scene load_steps=4 format=3 uid="uid://doy5txc3krw11"]

[ext_resource type="Script" uid="uid://0vx8wec6fgf0" path="res://Scripts/profile_screen.gd" id="1_4vgw4"]
[ext_resource type="Texture2D" uid="uid://tysuxg53oyv4" path="res://assets/images/fondo.jpg" id="2_61kkk"]
[ext_resource type="FontFile" uid="uid://by8s55j3r8lk" path="res://assets/scenes/dogica.ttf" id="3_5oxyd"]

[node name="ProfileScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4vgw4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_61kkk")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.0
offset_top = -226.0
offset_right = 294.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.01, 0, 0.00016666412, 0.7254902)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -338.0
offset_top = -277.0
offset_right = 387.0
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -136.0
offset_right = 164.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5oxyd")
text = "PERFIL DEL JUGADOR"

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(10, 50)
layout_mode = 2

[node name="AvatarRect" type="TextureRect" parent="Panel/VBoxContainer/CenterContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="UsernameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5oxyd")

[node name="ProgressLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5oxyd")

[node name="ExtraInfoLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5oxyd")

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_5oxyd")
text = "Volver al menu"

[connection signal="pressed" from="Panel/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
